# codezen-security-test

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/hello/: vulnerable.py
tests/: test_greet.py
